<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/dialog_stock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/dialog_hint"
        android:inputType="textCapCharacters" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/dialog_btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:textColor="@color/colorPrimary"
            android:text="@string/dialog_cancel"/>
        <Button
            android:background="@android:color/transparent"
            android:id="@+id/dialog_btnAdd"
            android:layout_width="0dp"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_add"/>
    </LinearLayout>

</LinearLayout>
